Swap a few defaults with custom content

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@ search_exclude: true
 image: images/logo.png
 ---
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+This site is built with [fastpages](https://github.com/fastai/fastpages) [^1]
 
-![]({{site.baseurl}}/images/ettrema-waters-light.png "https://github.com/jmp75")
+![Wind and light playing with the waters of the Ettrema river]({{site.baseurl}}/images/ettrema-waters-light.png "https://github.com/jmp75")
 
 # Posts
+
+
+
+
+
+
+[^1]:a blogging platform that natively supports Jupyter notebooks in addition to other formats.
