--- a/_pages/404.html
+++ b/_pages/404.html
@@ -22,4 +22,5 @@ search_exclude: true
   <h1>404</h1>
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
+  <img src="../images/try_climb_back.jpg" alt="Three young owls, one of them loosing balance from the branch"> 
 </div>
