fix URL for Andrew Freebairn's profile

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ image: images/logo.png
 
 This site is built with [fastpages](https://github.com/fastai/fastpages)
 
-![Wind and light playing with the waters of the Ettrema river]({{site.baseurl}}/images/ettrema-waters-light.png "https://www.google.com.au/maps/@-35.0225583,150.1780694,15z")
+[![Wind and sunlight on the waters of the Ettrema river]({{site.baseurl}}/images/ettrema-waters-light.png "Wind and sunlight on the waters of the Ettrema river")](https://www.google.com.au/maps/@-35.0225583,150.1780694,15z)
 
 # Posts
 
