deploy: c4512eacccdfaffe1b2b68e44e0ede83b829a2e6

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a></p>
 
-<p><img src="/work-blog/images/ettrema-waters-light.png" alt="Wind and light playing with the waters of the Ettrema river" title="https://www.google.com.au/maps/@-35.0225583,150.1780694,15z" /></p>
+<p><a href="https://www.google.com.au/maps/@-35.0225583,150.1780694,15z"><img src="/work-blog/images/ettrema-waters-light.png" alt="Wind and sunlight on the waters of the Ettrema river" title="Wind and sunlight on the waters of the Ettrema river" /></a></p>
 
 <h1 id="posts">Posts</h1>
 
