deploy: abf8d7ca48994264c7a755920bad4c32bc1c5d62

--- a/404.html
+++ b/404.html
@@ -87,7 +87,7 @@ window.onload = wrap_img;
   <h1>404</h1>
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
-  <img src="../images/try_climb_back.jpg" alt="Three young owls, one of them loosing balance from the branch"> 
+  <img src="/work-blog/images/try_climb_back.jpg" alt="Three young owls, one of them loosing balance from the branch"> 
 </div>
 
       </div>
